# point-set-embedder

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
honeybadger/: honeybadger.cmake
honeybadger/executables/: CLI.cu  CLI.cuh  HoneyBadger.cu  executables.cmake
honeybadger/include/honeybadger/: Geometry.cuh  JSON.cuh  Parameters.cuh  Utils.cuh  honeybadger.cuh
honeybadger/include/honeybadger/algorithms/: Algorithms.cuh  NearestNeighbors.cuh  (+1 more)
honeybadger/src/: JSON.cu  Utils.cu  src.cmake
honeybadger/src/algorithms/: NearestNeighbors.cu  RandomSearchAlgorithm.cu
honeybadger/src/datastructure/: Graph.cu  Problem.cu  Solution.cu
honeybadger/src/operations/: FindBestPoint.cu  InsertVertex.cu  RecomputeSolution.cu  RemoveVertex.cu
honeybadger/src/preprocessing/: AssignmentHints.cu  IgnoreEdges.cu  IgnorePoints.cu  IgnoreVertices.cu  SolverTree.cu
honeybadger/tests/: TestGeometry.cu  TestIntegration.cu  tests.cmake
honeybadger/tests/datastructure/: TestGraph.cu  TestProblem.cu
honeybadger/tests/operations/: TestFindBestPoint.cu
honeybadger/tests/testlib/: testlib.cmake
problems/: g1_t1.json  g1_t2.json  g1_t3.json  g1_t5.json  g1_t6.json  g1_t7.json  g2_t1.json  g2_t2.json  g2_t4.json  g2_t5.json  g2_t7.json  g3_t1.json  g3_t2.json  g3_t3.json  g3_t4.json  g3_t6.json  g3_t7.json  g4_t1.json  g4_t2.json  g4_t4.json  g4_t5.json  g4_t7.json  g5_t1.json  g5_t2.json  g5_t3.json  g5_t5.json  g5_t6.json  g5_t7.json  g6_t1.json  g6_t2.json  g6_t3.json  g6_t4.json  g6_t5.json  g6_t6.json  g6_t7.json
tools/: visualize_problem.py  visualize_solution.py
(+19 files in other folders)
